--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset='utf-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>MX-Target Io</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-</head>
+<%- include ('partials/header.ejs') %>
 
 <body>
-<h1>Bootstrap style </h1>
+  <%- include ('partials/navbar.ejs') %>
+
+  <div class="container">
+    <hr>
+    <h1> Questions </h1>
+    <hr>
+    <a href="/ask" class="btn btn-primary">Ask Here</a>
+    <hr>
+    <% asks.forEach(ask =>{ %>
+    <br>
+    <div class="card">
+      <div class="card-body">
+        <h3><%= ask.title %></h3>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-primary">Answer</button>
+      </div>
+    </div>
+    <p><%= ask.description %></p>
+    <%})%>
+  </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-<script src="/js/bootstrap.min.s"></script>
-</html>
+<%- include ('partials/footer.ejs') %>
