--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         <h3><%= ask.title %></h3>
       </div>
       <div class="card-footer">
-        <button class="btn btn-primary">Answer</button>
+       <a href="/ask/<%= ask.id %>"</a><button class="btn btn-primary">Answer</button></a>
       </div>
     </div>
     <p><%= ask.description %></p>
